Add dev instructions & Travis build

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:jest": "jest --watch",
     "dev:eslint": "esw . --ext .js -w",
     "dev:webpack": "NODE_ENV=development webpack-dev-server",
+    "pretest": "make src/granulate.js",
     "test": "concurrently npm:test:*",
     "test:jest": "jest",
     "test:eslint": "eslint . --ext .js"
